--- a/SMS/app_Admin/templates/dashboard_teachers.html
+++ b/SMS/app_Admin/templates/dashboard_teachers.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <title>Teacher Dashboard</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-7P6pSiv5R+ZlPPh4LMeTj/NkMSp6ckhE+04Aw1+7N8w=" crossorigin="anonymous"></script>
+
 </head>
 <body style="background-color: #f8f9fa;">
 
@@ -53,7 +55,6 @@
 
     </div>
 </div>
-
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
