--- a/SMS/app_Admin/templates/add_students.html
+++ b/SMS/app_Admin/templates/add_students.html
@@ -7,6 +7,7 @@
         <title>Add Student | School Dashboard</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" rel="stylesheet">
+         <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
         <style>
             .form-header {
                 background: linear-gradient(135deg,rgb(62, 136, 43),rgb(85, 230, 92));
@@ -50,7 +51,7 @@
                     
                         <!-- Form Body -->
                         <div class="card-body p-4">
-                            <form method="POST" >
+                            <form method="POST" id="sFrom" >
                                 {% csrf_token %}
                             
                                     <!-- Personal Info -->
@@ -152,7 +153,33 @@
                 </div>
             </div>
         </div>
-
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+        $(document).ready(function(){
+            $('#sFrom').on('submit',function(e){
+                e.preventDefault();
+                const formData= new FormData(this);
+                $.ajax({
+                    url:'',
+                    type:'POST',
+                    contentType:false,
+                    processData:false,
+                    data:formData,
+                    headers:{
+                        'X-CSRFToken':'{{csrf_token}}'
+                    },
+                    success: function(response){
+                        console.log("AJAX success response:", response)
+                        alert('Student Saved Succefully')
+                        window.location.href='{% url "list_students" %}'
+                    },
+                    error: function(xhr){
+                            let error = xhr.response || 'an unexpected error happend'
+                            alert('Student adding Failed \n'+ error)
+                    }
+                })
+            })
+        })
+    </script>
     </body>
-</html>\
+</html>
