--- a/SMS/app_Admin/templates/edit_students.html
+++ b/SMS/app_Admin/templates/edit_students.html
@@ -31,6 +31,7 @@
             color: #ffeb3b;
         }
     </style>
+  <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 </head>
 <body class="bg-light-blue">
     <div class="container py-5">
@@ -49,7 +50,7 @@
                     
                     <!-- Form Body -->
                     <div class="card-body p-4">
-                        <form method="POST" >
+                        <form method="POST" id="sForm">
                             {% csrf_token %}
                             
                                 <!-- Personal Info -->
@@ -105,7 +106,7 @@
                                 <div class="col-12">
                                      <div class="mb-3">
                                         <label for="classroom" class="form-label">Class</label> 
-                                            <select name="classroom" class="form-select" required>
+                                            <select name="classroom" class="form-select" >
                                                 {% for classroom in form.classroom.field.queryset %}
                                                    <option value="{{ classroom.id }}"
                                                          {% if classroom.id == student.classroom.id %}selected{% endif %}>
@@ -117,28 +118,8 @@
                                         <small class="text-muted">Select Class</small>  <!-- Updated help text -->
                                     </div>
                                 </div>      
-                               <!--select teacher feild-->
-                               <div class="col-12">
-                                    <div class="mb-3">
-                                        <label for="teacher" class="form-label">Teachers</label>
-                                        <select name="teacher" id="teacher" class="form-select" multiple="">
-                                            <option value="" selected disabled>Select Teachers</option>
-                                            {% for teacher in form.teacher.field.queryset %}
-                                            <option value="{{ teacher.id }}" {% for teacher in student.teacher.all  %} selected{% endfor %}>
-                                               {{ teacher.id }} {{ teacher.first_name }} {{ teacher.last_name }} 
-                                            </option>
-                                            {% endfor %}    
-                                        </select>
-                                    </div>
-                                </div>
-
-                                <!-- Additional Fields -->
-                                {% comment %} <div class="col-md-6">
-                                    <div class="mb-3">
-                                        <label for="Join_date" class="form-label">Join Date</label>
-                                        <input type="date" class="form-control" id="Join_date" name="Join_date" required>
-                                    </div>
-                                </div> {% endcomment %}
+                             
+                                
                                 <div class="col-md-6">
                                     <div class="mb-3">
                                         <label for="address" class="form-label">Address</label>
@@ -171,5 +152,31 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"></script>
 <script>
+    $(document).ready(function(){
+        $('#sForm').on('submit',function(e){
+            e.preventDefault();
+        const formData= new FormData(this);
+            $.ajax({
+            url:'',
+            type:'POST',
+            data: formData,
+            contentType: false,
+            processData: false,
+            headers:{
+                'X-CSRFToken':'{{csrf_token}}'
+            },
+            success: function(response){
+                alert('(AJAX): student Data updated Succefully!!! ')
+                window.location.href="{% url "list_students" %}"
+                
+            },
+            error: function(xhr){
+                    let error=xhr.response || 'unexpected error '
+                    alert("Studnet updation Failed!!!!"+ error)
+            }
+        })
+        })
+    })
+</script>
 </body>
 </html>
